# machine-learning-library

./: CMakeLists.txt  README.md
include/ml_library/: classification.hpp  decision_tree.hpp  k_means.hpp  linear_algebra.hpp  linear_regression.hpp
src/: classification.cpp  decision_tree.cpp  k_means.cpp  linear_algebra.cpp  linear_regression.cpp
tests/: test_classification.cpp  test_decision_tree.cpp  test_k_means.cpp  test_linear_regression.cpp
